--- a/src/index.css
+++ b/src/index.css
@@ -75,11 +75,11 @@ header .content button{
 .add-form .container form textarea{
     height: 100px;
 }
-.add-form .container form input[type='submit'] {
+.add-form .container form .sub {
     background: #2959b4;
     border: 2px solid #2959b4;
-    width: 70px;
-    height: 30px;
+    width: 120px;
+    height: 40px;
     text-align: center;
     font-weight: bold;
     border-radius: 5px;
@@ -91,7 +91,7 @@ header .content button{
     -ms-transition: .3s;
     -o-transition: .3s;
 }
-.add-form .container form input[type='submit']:hover {
+.add-form .container form .sub:hover {
     opacity: .9;
 }
 
@@ -128,6 +128,7 @@ header .content button{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 15px;
 }
 .post-contain .main-content .book .my-info{
     background-color: #ccc;
@@ -155,6 +156,9 @@ header .content button{
     -ms-transition: .3s;
     -o-transition: .3s;
     font-size: 14px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .post-contain .main-content .book .control button:last-child{
     background: tomato;
